# Faststrap

./: .gitignore  .sesskey  AGENTS.md  CHANGELOG.md  CHANGE_LOG.md  COMPONENT_SPEC.md  CONTRIBUTING.md  README.md  RELEASE_0_6_0_FIX_PLAN.md  ROADMAP.md  ROADMAP_EXPANDED.md  coverage.xml  fasthtml_exports.txt  fix_line_endings.py  llms.txt  log.txt  mkdocs.yml  mypy_errors.txt  mypy_errors_2.txt  mypy_errors_2_utf8.txt  mypy_errors_utf8.txt  mypy_log.txt  mypy_output.txt  parse_imports.py  pyproject.toml  pytest_output.txt  ruff_errors.txt  ruff_errors_2.txt  ruff_errors_2_utf8.txt  ruff_errors_utf8.txt  ruff_log.txt  test_output.txt  test_pwa_output.txt  undefined_names.json  undefined_names.txt  undefined_names_full.txt  undefined_names_pylint.txt
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: PWA_GUIDE.md  TROUBLESHOOTING.md  accessibility.md  effects.md  index.md
docs/api/: core.md  presets.md  seo.md
docs/deployment/: vps.md
docs/getting-started/: customization.md  doctor-cli.md  installation.md  quick-start.md
docs/layouts/: auth.md  dashboard.md  landing.md
docs/presets/: active-search.md  auto-refresh.md  index.md  infinite-scroll.md  lazy-load.md  loading-button.md  require-auth.md  responses.md  sse-stream.md
docs/seo/: README.md  index.md
docs/showcase/: portfolios.md
examples/: demo_all.py  ecommerce.py  patterns_demo.py  phase4a_demo.py  pwa_demo.py
examples/01_getting_started/: adding_htmx.py
examples/01_hello_button/: app.py  test_all.py
examples/02_examples/: app.py
examples/02_phase_1_complete/: app.py
examples/03_examples/: app.py
examples/04_example/: app.py
examples/04_examples/: app.py
examples/05_examples/: app.py  landing_demo.py  modern_dashboard.py  portfolio_demo2.py
examples/05_new_components/: README.md  auth_pages.py  error_dialogs.py  error_pages.py  form_components.py  pattern_components.py  pre_v060_features.py  presets_interactions.py  presets_responses.py  seo_demo.py  v059_showcase.py  v060_data_foundations.py  v060_sse_stream.py
examples/showcase/: portfolio_premium.py
showcase/: admin_dashboard.py  agency_portfolio.py  furniture_store_showcase.py  hotel_booking_showcase.py  saas_landing.py
skills/faststrap-app-builder/: SKILL.md
src/faststrap/: __init__.py  accessibility.py  cli.py
tests/: conftest.py  test_accessibility.py  test_attrs.py  test_cli.py  test_mount_assets.py  test_page_meta.py  test_presets.py  test_presets_streams.py  test_pwa.py  test_recent_components.py  test_seo_meta.py  test_seo_structured_data.py
tests/test_components/: test_accordion.py  test_alert.py  test_badge.py  test_button.py  test_card.py  test_carousel.py  test_chart.py  test_dashboard_grid.py  test_data_table.py  test_date_range_picker.py  test_error_dialog.py  test_error_page.py  test_export_button.py  (+23 more)
(+151 files in other folders)
